// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-beqWaB dLcSoP"
  />
</DocumentFragment>
`;

exports[`match snapshot with params 1`] = `
<DocumentFragment>
  <div
    class="sc-beqWaB iCQipX"
  />
</DocumentFragment>
`;

exports[`match snapshot with sm an lg 1`] = `
<DocumentFragment>
  <div
    class="sc-beqWaB sNqNg"
  />
</DocumentFragment>
`;
